# phase-2-todo-web

./: .gitignore  README.md  clarification_question.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
backend/: .gitignore  GEMINI.md  app.py  database.py  dependencies.py  pyproject.toml  requirements.txt  security.py
backend/models/: __init__.py  task.py  user.py
backend/routers/: __init__.py  auth.py  tasks.py
backend/tests/: conftest.py  test_auth_login.py  test_auth_register.py  test_tasks_create.py  test_tasks_delete.py  test_tasks_edit.py  test_tasks_filter.py  test_tasks_sort.py  test_tasks_update_status.py  test_tasks_view.py
e2e-tests/: example.spec.ts
frontend/: .eslintignore  .prettierignore  GEMINI.md  middleware.ts  package-lock.json  package.json  postcss.config.mjs
frontend/components/: Navbar.tsx  TaskFilter.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/lib/: auth.ts  error-logger.ts
frontend/src/app/: globals.css  page.tsx
history/adr/: 0001-frontend-technology-stack.md  0002-backend-technology-stack-and-orm.md  0003-database-system.md  0004-authentication-and-authorization-strategy.md  0005-testing-strategy.md
history/prompts/1-todo-console-app/: 0001-specify-todo-console-app.spec.prompt.md  0002-clarify-todo-console-app.spec.prompt.md  (+3 more)
specs/002-fullstack-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-console-app/: plan.md  spec.md  tasks.md
src/tests/: test_task_service.py
src/todo_app/: main.py
(+22 files in other folders)
