[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.7",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]
